overflow fix

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@
 
 body {
     font-family: "Figtree", sans-serif;
+    box-sizing: border-box;
     height: 100vh;
     width: 100vw;
-    box-sizing: border-box;
     display: flex;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
     background-color: var(--yellow);
